# linked-list-web-demo

./: LICENSE  Makefile  README.md  backlog.org  capstone.cabal  linked-list-web-demo.cabal  web-demos.cabal
src/: LinkedListDemo.hs  button.hs  game.html  game.js  index.md  linked.elm  lists.elm  lists2.hs  lists2.html  main.css  p1.md  p2.md  p3.md  p4.md  p5.md  try.html
src/Capstone/: Links.hs
src/Demo/: JS.hs  Links.hs  Random.hs  Types.hs
static/: linked_list.css  linked_list.html
